# godot-grpc

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  buf.yaml
.github/workflows/: ci.yml  docs.yml
crates/godot-grpc/: Cargo.toml  README.md  godot-grpc.gdextension
crates/godot-grpc/src/: bridge.rs  call.rs  channel.rs  convert.rs  descriptor.rs  error.rs  lib.rs  message.rs  runtime.rs  service.rs  tests.rs  transport.rs
crates/grpc-test-fixtures/: Cargo.toml  build.rs
crates/grpc-test-fixtures/proto/: helloworld.proto
crates/grpc-test-fixtures/src/: lib.rs
crates/protoc-gen-godot-grpc/: Cargo.toml  README.md
crates/protoc-gen-godot-grpc/src/: codegen.rs  main.rs
docs/book/: book.toml
docs/book/src/: SUMMARY.md  codegen.md  installation.md  introduction.md  quickstart.md  streaming.md  threading.md  tiers.md  type-mapping.md
examples/godot-test-project/: cancel_test.gd  cancel_test.gd.uid  cancel_test.tscn  conversion_test.gd  conversion_test.gd.uid  conversion_test.tscn  generated_test.gd  generated_test.gd.uid  generated_test.tscn  godot-grpc.gdextension  godot-grpc.gdextension.uid  grpc_test.gd  grpc_test.gd.uid  grpc_test.tscn  main.gd  main.gd.uid  project.godot  tier2_test.gd  tier2_test.gd.uid  tier2_test.tscn
examples/helloworld-gdscript/: README.md  godot-grpc.gdextension  godot-grpc.gdextension.uid  main.gd  main.gd.uid  project.godot
examples/helloworld-gdscript/proto/helloworld/v1/: greeter.proto
